<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeuRancho</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="username">Usuario</string>
    <string name="senha">Senha</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ItemsList">Cadastro de Listas de Itens</string>
    <string name="SearchHistory">Histórico de Buscas Efetuadas</string>
    <string name="Search">Efetuar Comparação</string>
    <string name="title_activity_items_list">ItemsListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cadastrar_codigo">Cadastrar Código de Barras</string>
    <string name="SelMarket">Selecionar Supermercado</string>
    <string name="title_activity_sel_market">SelMarketActivity</string>

</resources>
