<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.meurancho.MainActivity" >

    <item
        android:id="@+id/ItemsList"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ItemsList"/>
    <item
        android:id="@+id/Codigo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_cadastrar_codigo"
    />
    <item
        android:id="@+id/SearchHistory"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/SearchHistory"
    />
    <item
        android:id="@+id/Search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Search"
    />
    <item
        android:id="@+id/SelMarket"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/SelMarket"
    />
</menu>
